More improvements